--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "homepage": "https://github.com/enspiral-cherubi/tre-flips",
   "dependencies": {
     "jquery": "^2.2.3",
+    "lodash.range": "^3.1.4",
     "raf-loop": "^1.1.3",
     "three": "^0.76.1",
     "three-orbit-controls": "^72.0.0",
