--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "jquery": "^2.2.3",
     "lodash.range": "^3.1.4",
     "raf-loop": "^1.1.3",
+    "randomcolor": "^0.4.4",
     "three": "^0.76.1",
     "three-orbit-controls": "^72.0.0",
-    "three-stl-loader": "^1.0.4",
     "three-window-resize": "^1.0.4"
   },
   "devDependencies": {
