--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/enspiral-cherubi/tre-flips",
   "dependencies": {
+    "average": "0.0.1",
     "jquery": "^2.2.3",
     "lodash.range": "^3.1.4",
     "raf-loop": "^1.1.3",
